@@ -3994,126 +3994,6 @@ class Axes(Artist):
         self.add_collection(collection)
         return collection
 
-    def pcolor_classic(self, *args, **kwargs):
-        """
-        PCOLOR_CLASSIC(self, *args, **kwargs)
-
-        Function signatures
-
-            pcolor(C) - make a pseudocolor plot of matrix C
-
-            pcolor(X, Y, C) - a pseudo color plot of C on the matrices X and Y
-
-            pcolor(C, cmap=cm.jet) - make a pseudocolor plot of matrix C using
-              rectangle patches using a colormap jet.  Colormaps are avalible
-              in matplotlib.cm.  You must pass this as a kwarg.
-
-            pcolor(C, norm=normalize()) - the normalization function used
-        `     to scale your color data to 0-1.  must be passed as a kwarg.
-
-            pcolor(C, alpha=0.5) - set the alpha of the pseudocolor plot.
-              Must be used as a kwarg
-
-        Shading:
-
-            The optional keyword arg shading ('flat' or 'faceted') will
-            determine whether a black grid is drawn around each pcolor square.
-            Default 'faceteted' e.g., pcolor(C, shading='flat') pcolor(X, Y,
-            C, shading='faceted')
-
-        Return value is a list of patch objects.
-
-        Grid orientation
-
-            The behavior of meshgrid in matlab(TM) is a bit counterintuitive for x
-            and y arrays.  For example,
-
-                  x = arange(7)
-                  y = arange(5)
-                  X, Y = meshgrid(x,y)
-
-                  Z = rand( len(x), len(y))
-                  pcolor(X, Y, Z)
-
-            will fail in matlab and matplotlib.  You will probably be
-            happy with
-
-                pcolor(X, Y, transpose(Z))
-
-            Likewise, for nonsquare Z,
-
-                pcolor(transpose(Z))
-
-            will make the x and y axes in the plot agree with the numrows
-            and numcols of Z
-        """
-
-        if not self._hold: self.cla()
-        shading = popd(kwargs,'shading', 'faceted')
-        cmap = popd(kwargs,'cmap', cm.get_cmap())
-        norm = popd(kwargs,'norm', normalize())
-        alpha = popd(kwargs,'alpha', 1.0)
-
-        if len(kwargs):
-            raise TypeError, "pcolor_classic() got an unexpected keyword argument '%s'"%kwargs.keys()[0]
-
-        if len(args)==1:
-            C = args[0]
-            numRows, numCols = C.shape
-            X, Y = meshgrid(arange(numCols+1), arange(numRows+1) )
-        elif len(args)==3:
-            X, Y, C = args
-        else:
-            raise TypeError, 'Illegal arguments to pcolor; see help(pcolor)'
-
-        Nx, Ny = X.shape
-
-        if isinstance(norm, normalize) and not norm.scaled():
-            norm.autoscale(C)
-
-        nc = norm(C)
-        RGBA = cmap(nc, alpha)
-
-        patches = []
-
-        for i in range(Nx-1):
-            for j in range(Ny-1):
-                color = tuple(RGBA[i,j,:3])
-                left = X[i,j]
-                bottom = Y[i,j]
-                width = X[i,j+1]-left
-                height = Y[i+1,j]-bottom
-                rect = Rectangle(
-                    (left, bottom), width, height,
-                    )
-                rect.set_facecolor(color)
-                rect.set_alpha(RGBA[i,j,3])
-                if shading == 'faceted':
-                    rect.set_linewidth(0.25)
-                    rect.set_edgecolor('k')
-                else:
-                    rect.set_edgecolor(color)
-                self.patches.append(rect)
-                rect.set_figure(self.figure)
-                rect.set_transform(self.transData)
-                patches.append(rect)
-        self.grid(0)
-
-        x = ravel(X)
-        y = ravel(Y)
-        minx = amin(x)
-        maxx = amax(x)
-        miny = amin(y)
-        maxy = amax(y)
-
-        corners = (minx, miny), (maxx, maxy)
-
-
-        self.update_datalim( corners)
-        self.autoscale_view()
-        return patches
-
-
     def contour(self, *args, **kwargs):
         kwargs['filled'] = False
         return ContourSet(self, *args, **kwargs)
